# superbrain

./: .env.example  .gitignore  .gitmessage  AGENTS.md  Dockerfile  README.md  fly.toml  package-lock.json  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: auto-branch.sh
.cursor/rules/: cleanup.mdc  concurrency.mdc  gaia-sync.mdc  git-workflow.mdc  knowledge-log.mdc  pr-ci-responsibility.mdc
.gaia/: manifest.json  outbox.md
.gaia/reference/: README.md  exemplars.md  preferences.md
.gaia/reference/archetypes/: cli-tool.md  data-pipeline.md  multi-tenant-saas.md  personal-web-spa.md
.gaia/reference/patterns/: README.md  agent-worktree-sessions.md  anti-patterns.md  ci-matrix-strategy.md  zero-downtime-migrations.md
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  scheduled-scrapes.yml
deploy/api/: Dockerfile  fly.toml
docs/: REPO_SUPER_SUMMARY_ACCOUNT_HANDOFF.md  brief.md  knowledge.md
docs/deployment/: api-and-spa.md  scheduler.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: app-shell.tsx  error-banner.tsx  match-card.tsx  matches-table.tsx  odds-rows.tsx  page-header.tsx  plot.tsx  team-crest.tsx
frontend/src/lib/: api.ts  auth-token.ts  format.ts  markets.ts  odds-group.ts  types.ts
frontend/src/routes/: backtest.tsx  bets-recent.tsx  dashboard.tsx  data.tsx  login.tsx  match-detail.tsx  matches.tsx  scrapers.tsx  settings.tsx  trends.tsx  value-bets.tsx
frontend/src/stores/: auth.ts  preferences.ts
frontend/src/test/: api.test.ts  auth-store.test.ts  auth-token.test.ts  bets-recent.test.tsx  data.test.tsx  dropdown-menu.test.tsx  markets.test.ts  match-card.test.tsx  matches-table.test.tsx  odds-rows-table.test.tsx  setup.ts
scripts/: backfill_historical.py  build_sisal_fixtures.py  generate_engine_golden.py  import_legacy_odds.py  live_goldbet_smoke.py  promote_fixtures_from_odds.py  setup-hooks.sh
src/superbrain/: __init__.py
src/superbrain/ablation/: __init__.py  persistence.py  study.py
src/superbrain/alerts/: __init__.py  __main__.py  config.py  dispatcher.py  models.py  policy.py  scheduler.py  sink.py
src/superbrain/analytics/: __init__.py
src/superbrain/api/: __init__.py  app.py  config.py  deps.py  logging_config.py  main.py  middleware.py  schemas.py
src/superbrain/backtest/: __init__.py
src/superbrain/core/: __init__.py  markets.py  models.py  team_aliases.py  teams.py
src/superbrain/data/: __init__.py  connection.py  legacy_odds.py  paths.py  schemas.py
src/superbrain/engine/: __init__.py  backtest.py  clustering.py  pipeline.py  probability.py  similarity.py
src/superbrain/scheduler/: __init__.py  __main__.py  cli.py  config.py  (+2 more)
tests/: test_smoke.py
tests/ablation/: test_feature_ablation.py
tests/alerts/: __init__.py  conftest.py  test_dispatcher.py  test_email.py  test_policy.py  test_sink.py  test_telegram.py
tests/api/: conftest.py  test_auth.py  test_backtest.py  test_bets.py  test_bets_value.py  test_concurrency.py  test_config.py  test_data.py  test_errors.py  test_health.py  test_matches.py  test_odds.py  test_scrapers.py  test_trends.py
tests/core/: test_markets.py  test_models.py  test_teams.py
tests/data/: test_lake.py  test_legacy_import_e2e.py  test_legacy_odds.py
tests/engine/: conftest.py  test_backtest.py  test_bets.py  test_clustering.py  test_pipeline.py  test_probability.py  test_regression.py  test_similarity.py
tests/scheduler/: conftest.py  test_cli.py  test_config.py  test_jobs.py  test_live.py  test_runner.py
(+111 files in other folders)
