[project]
name = "superbrain"
version = "0.0.0"
description = "AI-owned football value-bet platform: continuous scrapers, DuckDB+Parquet lake, bet-agnostic engine, shared SPA."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "superbrain owners" },
]
license = { text = "Proprietary" }

dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.14.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "plotly>=5.24.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-telegram-bot>=21.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.48.0",
]
legacy-import = [
    "sqlalchemy>=2.0.0",
]
historical = [
    "soccerdata>=1.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "hypothesis>=6.112.0",
    "pre-commit>=4.0.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superbrain"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "node_modules",
    "data",
    "frontend",
    ".gaia",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PL",   # pylint
]
ignore = [
    "E501",     # line too long (ruff format handles it)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic numbers (we use them a lot in betting math)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["PLR0915", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["superbrain"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = [
    "^data/",
    "^frontend/",
    "^.venv/",
]

# Third-party overrides land here as real imports appear in phases 1+.

[[tool.mypy.overrides]]
module = ["soccerdata", "pandas"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backfill_historical"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.scrapers.historical.test_backfill"
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
module = "tests.scrapers.historical.test_live"
disable_error_code = ["import-not-found"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:apscheduler.*",
]
markers = [
    "integration: tests that touch real services (skipped by default in CI)",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
source = ["src/superbrain"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
